--- a/css/lib/layout.dist.scss
+++ b/css/lib/layout.dist.scss
@@ -1,5 +1,5 @@
 /**
- * accordion.dist.scss - Sample styles for the accordion block
+ * layout.dist.scss - Container and box widths and margins
  *
  * @version     3.0.0
  * @package     wp_theme_lyquix
@@ -20,31 +20,17 @@
     "Y8888P"     888     "Y88888P"  888         888
 
   DO NOT MODIFY THIS FILE!
-	Instead copy it to css/custom/accordion.scss and make your changes there.
+	Instead copy it to css/custom/base.scss and make your changes there.
 */
 
-.lqx-block-accordion {
-	.accordion-header {
-		display: block;
-		background: none;
-		outline: none;
-		border: none;
-		padding: 0;
-		width: 100%;
-		text-align: left;
+@each $s in $screen-sizes {
+	.container {
+		@apply #{$s}:mx-container-#{$s} #{$s}:max-w-container-#{$s};
 	}
+}
 
-	.accordion-panel {
-		display: grid;
-		grid-template-rows: 1fr;
-		transition: grid-template-rows 0.5s ease-out;
-
-		&.closed {
-			grid-template-rows: 0fr;
-		}
-
-		& > div {
-			overflow: hidden;
-		}
+@each $s in $screen-sizes {
+	.box-l {
+		@apply #{$s}:p-#{$s} #{$s}:m-#{$s};
 	}
 }
