--- a/css/lib/forms.dist.scss
+++ b/css/lib/forms.dist.scss
@@ -1,5 +1,5 @@
 //
-// forms.dist.scss - Form styles
+// forms.dist.scss - Sample form styles
 //
 // @version     3.0.0
 // @package     wp_theme_lyquix
