--- a/css/lib/layout.dist.scss
+++ b/css/lib/layout.dist.scss
@@ -1,5 +1,5 @@
 /**
- * layout.dist.scss - Container and box widths and margins
+ * layout.dist.scss - Sample container and box widths and margins
  *
  * @version     3.0.0
  * @package     wp_theme_lyquix
@@ -20,7 +20,7 @@
     "Y8888P"     888     "Y88888P"  888         888
 
   DO NOT MODIFY THIS FILE!
-	Instead copy it to css/custom/base.scss and make your changes there.
+	Instead copy it to css/custom/layout.scss and make your changes there.
 */
 
 @each $s in $screen-sizes {
