--- a/css/lib/lists.dist.scss
+++ b/css/lib/lists.dist.scss
@@ -1,5 +1,5 @@
 //
-// lists.dist.scss - List styles
+// lists.dist.scss - Sample list styles
 //
 // @version     3.0.0
 // @package     wp_theme_lyquix
