--- a/css/lib/text.dist.scss
+++ b/css/lib/text.dist.scss
@@ -1,5 +1,5 @@
 //
-// text.dist.scss - Text styles
+// text.dist.scss - Sample text styles
 //
 // @version     3.0.0
 // @package     wp_theme_lyquix
