--- a/css/lib/vars.dist.scss
+++ b/css/lib/vars.dist.scss
@@ -1,5 +1,5 @@
 //
-// vars.dist.scss - SCSS and CSS variables
+// vars.dist.scss - Sample SCSS and CSS variables
 //
 // @version     3.0.0
 // @package     wp_theme_lyquix
