--- a/css/lib/tables.dist.scss
+++ b/css/lib/tables.dist.scss
@@ -1,5 +1,5 @@
 //
-// tables.dist.scss - Table styles
+// tables.dist.scss - Sample table styles
 //
 // @version     3.0.0
 // @package     wp_theme_lyquix
