--- a/php/browsers/browsers.css
+++ b/php/browsers/browsers.css
@@ -1,5 +1,5 @@
 /**
- * browser-alert.css - Styles for outdated browser alert
+ * browsers.css - Styles for outdated browser alert
  *
  * @version     3.0.0
  * @package     wp_theme_lyquix
@@ -22,7 +22,16 @@
   DO NOT MODIFY THIS FILE!
 */
 
+body {
+	overflow: hidden !important;
+}
+
+body > * {
+	display: none !important;
+}
+
 #browser-alert {
+	display: block !important;
 	z-index: 10000;
 	background-color: #fff;
 	position: fixed;
@@ -30,13 +39,13 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	padding: 10%;
+	padding: 3em 0.5em;
 	text-align: center;
 	overflow-y: scroll;
 }
 
 #browser-alert > * {
-	max-width: 726px;
+	max-width: 960px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -46,47 +55,27 @@
 	margin-top: 0;
 	margin-bottom: 0;
 	padding: 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 1em;
 }
 
 #browser-alert li {
-	display: inline-block;
-	width: 242px;
+	max-width: 300px;
 	text-align: center;
 	vertical-align: top;
+	background-color: #efefef;
+	border-radius: 2em;
+	padding: 1em;
+}
+
+#browser-alert li:hover {
+	background-color: #e4e9fd;
 }
 
 #browser-alert li .icon {
+	margin: 1em auto;
 	width: 125px;
-	height: 135px;
-	margin: 20px auto;
-	background-image: url("../php/browsers/icons-sprite.png");
-	background-repeat: no-repeat;
-}
-
-#browser-alert li#chrome .icon {
-	background-position: 0 0;
-}
-
-#browser-alert li#firefox .icon {
-	background-position: -125px 0;
-}
-
-#browser-alert li#opera .icon {
-	background-position: -250px 0;
-}
-
-#browser-alert li#safari .icon {
-	background-position: -375px 0;
-}
-
-#browser-alert li#ie .icon {
-	background-position: -500px 0;
-}
-
-#browser-alert li#edge .icon {
-	background-position: -625px 0;
-}
-
-#browser-alert li#brave .icon {
-	background-position: -750px 0;
+	height: 125px;
 }
