--- a/css/lib/cards.dist.scss
+++ b/css/lib/cards.dist.scss
@@ -23,12 +23,34 @@
 	Instead copy it to css/custom/cards.scss and make your changes there.
 */
 
+$cards-image-positions: left top right;
+$cards-image-icon-positions: left center right;
+
 .lqx-block-cards {
 	.cards-wrapper {
 		display: grid;
 		gap: 1em;
-		grid-template-columns: 1fr 1fr 1fr;
 		list-style: none;
 		padding: 0;
+	}
+
+	@each $size in $screen-sizes {
+		@screen #{$size} {
+			@for $i from 1 through 12 {
+				.#{$size}\:columns-#{$i} .cards-wrapper {
+					grid-template-columns: repeat(#{$i}, 1fr);
+				}
+			}
+			@each $i in $cards-image-positions {
+				.#{$size}\:image-position-#{$i} .image {
+					/* image position */
+				}
+			}
+			@each $i in $cards-image-icon-positions {
+				.#{$size}\:image-icon-position-#{$i} .icon {
+					/* image icon position */
+				}
+			}
+		}
 	}
 }
