New 7-1 folder architecture for SCSS files
(cherry picked from commit 25f0c1be931d35be748c54ed94a4953438554a3f)

--- a/css/custom/custom.dist.scss
+++ b/css/custom/custom.dist.scss
@@ -26,134 +26,11 @@
 @tailwind components;
 @tailwind utilities;
 
-// Global styling for HTML elements
-// --------------------------------
-
-// SCSS and CSS Variables
-@import "vars";
-
-// Base
-// Main elements: html, body, section, article, aside, header, footer, main, nav, menu, hr
+@import "abstracts";
 @import "base";
+@import "components";
+@import "layouts";
 
-// Text
-// Main elements: body, p, a, h1, h2, h3, h4, h5, h6, strong, em, pre, code,
-//                sub, sup, small, big, dfn, blockquote
-@import "text";
-
-// Lists
-// Main elements: ul, ol, li, dl, dt, dd
-@import "lists";
-
-// Tables
-// Main elements: table, thead, tbody, tfoot, tr, th, td, caption, colgroup, col
-@import "tables";
-
-// Forms
-// Main elements: form, label, textarea, select, option, button,
-//                input[type="text"], input[type="password"], input[type="search"]
-//                input[type="button"], input[type="submit"], input[type="reset"],
-//                input[type="checkbox"], input[type="radio"]
-// Other: fieldset, legend, optgroup, meter, progress, other input types
-@import "forms";
-
-// Common elements
-// ---------------
-
-// Utility
-@import "utility";
-
-// Buttons
-@import "buttons";
-
-// Pagination
-@import "pagination";
-
-// Breadcrumbs
-@import "breadcrumbs";
-
-// Other
-// Include other elements such as: tooltips, tags, icons, videos, etc.
-
-// Lyquix Blocks and Modules
-// -------------------------
-
-// Accordion
-@import "accordion";
-
-// Alerts
-@import "alerts";
-
-// Banner
-@import "banner";
-
-// Cards
-@import "cards";
-
-// CTA
-@import "cta";
-
-// Gallery
-@import "gallery";
-
-// Hero
-@import "hero";
-
-// Layout
-@import "layout";
-
-// Logos
-@import "logos";
-
-// Lyqbox
-@import "lyqbox";
-
-// Modal
-@import "modal";
-
-// Popup
-@import "popup";
-
-// Slider
-@import "slider";
-
-// Social
-@import "social";
-
-// Tabs
-@import "tabs";
-
-// Common website sections
-// -----------------------
-
-// Header
-@import "header";
-
-// Footer
-@import "footer";
-
-// Filters
-@import "filters";
-
-// Home
-@import "home";
-
-// Search results
-@import "search";
-
-// 404
-@import "404";
-
-// Project content types
-// ---------------------
-
-// Generic pages
-@import "page";
-
-// Blog
-@import "blog";
-@import "blog-archive";
-
-// Custom post type, e.g. Project
-@import "project";
-@import "project-archive";
+@import "pages";
+@import "themes";
+@import "vendors";
