--- a/css/lib/abstracts/_variables.dist.scss
+++ b/css/lib/abstracts/_variables.dist.scss
@@ -1,6 +1,5 @@
 /**
- * banner.dist.scss - Sample styles for the banner block
- *
+ * _variables.dist.scss - Sample styles for the variable styles
  * @version     3.0.0
  * @package     wp_theme_lyquix
  * @author      Lyquix
@@ -20,5 +19,8 @@
     "Y8888P"     888     "Y88888P"  888         888
 
   DO NOT MODIFY THIS FILE!
-	Instead copy it to css/custom/banner.scss and make your changes there.
+	Instead copy it to css/custom/abstracts/_variables.scss and make your changes there.
 */
+
+$screen-sizes: xs sm md lg xl;
+$headings: h1 h2 h3 h4 h5 h6;
