--- a/css/lib/components/_slider.dist.scss
+++ b/css/lib/components/_slider.dist.scss
@@ -1,5 +1,5 @@
 /**
- * cta.dist.scss - Sample styles for the CTA module
+ * _slider.dist.scss - Sample styles for the slider block
  *
  * @version     3.0.0
  * @package     wp_theme_lyquix
@@ -20,5 +20,5 @@
     "Y8888P"     888     "Y88888P"  888         888
 
   DO NOT MODIFY THIS FILE!
-	Instead copy it to css/custom/cta.scss and make your changes there.
+	Instead copy it to css/custom/components/_slider.scss and make your changes there.
 */
