--- a/css/lib/layouts/_footer.dist.scss
+++ b/css/lib/layouts/_footer.dist.scss
@@ -1,6 +1,5 @@
 /**
- * alerts.dist.scss - Sample styles for the alerts module
- *
+ * _footer.dist.scss - Footer styles
  * @version     3.0.0
  * @package     wp_theme_lyquix
  * @author      Lyquix
@@ -20,5 +19,5 @@
     "Y8888P"     888     "Y88888P"  888         888
 
   DO NOT MODIFY THIS FILE!
-	Instead copy it to css/custom/alerts.scss and make your changes there.
+	Instead copy it to css/custom/components/_footer.scss and make your changes there.
 */
