--- a/css/lib/pages/_home.dist.scss
+++ b/css/lib/pages/_home.dist.scss
@@ -1,6 +1,5 @@
 /**
- * popup.dist.scss - Sample styles for the popup module
- *
+ * _home.dist.scss - Navigation styles
  * @version     3.0.0
  * @package     wp_theme_lyquix
  * @author      Lyquix
@@ -20,5 +19,5 @@
     "Y8888P"     888     "Y88888P"  888         888
 
   DO NOT MODIFY THIS FILE!
-	Instead copy it to css/custom/popup.scss and make your changes there.
+	Instead copy it to css/custom/components/_home.scss and make your changes there.
 */
