--- a/css/lib/layouts/_index.dist.scss
+++ b/css/lib/layouts/_index.dist.scss
@@ -1,6 +1,5 @@
 /**
- * gallery.dist.scss - Sample styles for the gallery block
- *
+ * _index.dist.scss - Sample styles for the colors styles
  * @version     3.0.0
  * @package     wp_theme_lyquix
  * @author      Lyquix
@@ -20,5 +19,9 @@
     "Y8888P"     888     "Y88888P"  888         888
 
   DO NOT MODIFY THIS FILE!
-	Instead copy it to css/custom/gallery.scss and make your changes there.
+	Instead copy it to css/custom/layouts/_index.scss and make your changes there.
 */
+
+@forward "header";
+@forward "footer";
+@forward "layout";
