typography needs variables
(cherry picked from commit 139dd63134bb2930d1da753fe616f602e09f1d30)

--- a/css/lib/base/_typography.dist.scss
+++ b/css/lib/base/_typography.dist.scss
@@ -21,6 +21,8 @@
 //  DO NOT MODIFY THIS FILE!
 //  Instead copy it to css/custom/base/_typography.scss and make your changes there.
 
+@use "../abstracts/variables" as *;
+
 html {
 	// Set default font-size to 10px, then use rem units for the rest of the stylesheet
 	font-size: 10px;
