--- a/css/lib/layouts/_layout.dist.scss
+++ b/css/lib/layouts/_layout.dist.scss
@@ -24,15 +24,71 @@
 */
 
 @use "../abstracts/variables" as *;
+@use "sass:math";
 
 @each $s in $screen-sizes {
-	.container {
-		@apply #{$s}:mx-container-#{$s} #{$s}:max-w-container-#{$s};
+	@screen #{$s} {
+		// $grdCls = total number of grid columns
+		$grdCls: nth($grid-columns, index($screen-sizes, $s));
+		// $grdGap = grid gap in pixels
+		$grdGap: nth($grid-gaps, index($screen-sizes, $s));
+		// $cntMrg = container margin
+		$pct: math.percentage(math.div(1, $grdCls));
+		$px: math.div($grdGap, $grdCls);
+		$cntMrg: calc(#{$pct} + #{$px});
+		// $cntWth = container width
+		$pct: math.percentage(1 - math.div(2, $grdCls));
+		$px: math.div(2 * $grdGap, $grdCls);
+		$cntWth: calc(#{$pct} + #{$px});
+
+		@if $s == xl {
+			.container {
+				margin: 0 auto;
+				width: 100%;
+				max-width: $cntWth;
+			}
+
+			.grid-container {
+				grid-template-columns:
+					[full-width-start]
+					minmax($cntMrg, 1fr)
+					[container-start]
+					minmax(0, $cntWth)
+					[container-end]
+					minmax($cntMrg, 1fr)
+					[full-width-end];
+			}
+		} @else {
+			.container {
+				margin: 0 $cntMrg;
+				width: 100%;
+				max-width: none;
+			}
+			.grid-container {
+				grid-template-columns:
+					[full-width-start]
+					$cntWth
+					[container-start]
+					auto
+					[container-end]
+					$cntWth
+					[full-width-end];
+			}
+		}
 	}
 }
 
-@each $s in $screen-sizes {
-	.box-l {
-		@apply #{$s}:p-#{$s} #{$s}:m-#{$s};
-	}
+.grid-container {
+	display: grid;
+}
+
+.grid-container > :not(.full-width),
+.full-width > :not(.full-width) {
+	grid-column: container;
+}
+
+.grid-container > .full-width {
+	grid-column: full-width;
+	display: grid;
+	grid-template-columns: inherit;
 }
