Change: add missing CSS dist files, and add lines to load variables and mixins to all files.
(cherry picked from commit eecc26707115b7084b35ca2ee360db81ce0f9911)

--- a/css/lib/base/_forms.dist.scss
+++ b/css/lib/base/_forms.dist.scss
@@ -22,6 +22,9 @@
 	Instead copy it to css/custom/components/_forms.scss and make your changes there.
 */
 
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
 input,
 textarea,
 select {
