--- a/css/lib/components/_accordion.dist.scss
+++ b/css/lib/components/_accordion.dist.scss
@@ -22,6 +22,9 @@
 	Instead copy it to css/custom/components/_accordion.scss and make your changes there.
 */
 
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
 .lqx-block-accordion {
 	.accordion-header {
 		display: block;
