--- a/css/lib/components/_banner.dist.scss
+++ b/css/lib/components/_banner.dist.scss
@@ -22,3 +22,16 @@
   DO NOT MODIFY THIS FILE!
 	Instead copy it to css/custom/components/_banner.scss and make your changes there.
 */
+
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
+.lqx-block-banner {
+	.banner {
+		.image {
+		}
+
+		.text {
+		}
+	}
+}
