--- a/css/lib/components/_buttons.dist.scss
+++ b/css/lib/components/_buttons.dist.scss
@@ -21,3 +21,14 @@
   DO NOT MODIFY THIS FILE!
 	Instead copy it to css/custom/components/_buttons.scss and make your changes there.
 */
+
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
+button,
+[type="button"],
+[type="submit"],
+[type="reset"],
+.button,
+.btn {
+}
