--- a/css/lib/components/_cta.dist.scss
+++ b/css/lib/components/_cta.dist.scss
@@ -22,3 +22,17 @@
   DO NOT MODIFY THIS FILE!
 	Instead copy it to css/custom/components/_cta.scss and make your changes there.
 */
+
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
+.lqx-module-cta {
+	.image {
+	}
+
+	.content {
+	}
+
+	.links {
+	}
+}
