--- a/css/lib/components/_index.dist.scss
+++ b/css/lib/components/_index.dist.scss
@@ -29,9 +29,11 @@
 @forward "cards";
 @forward "cta";
 @forward "hero";
+@forward "filters";
 @forward "gallery";
 @forward "logos";
 @forward "popup";
+@forward "modal";
 @forward "social";
 @forward "slider";
 @forward "tabs";
