--- a/css/lib/pages/_search.dist.scss
+++ b/css/lib/pages/_search.dist.scss
@@ -21,3 +21,8 @@
   DO NOT MODIFY THIS FILE!
 	Instead copy it to css/custom/components/_search.scss and make your changes there.
 */
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
+body.search {
+}
