--- a/css/lib/base/_tables.dist.scss
+++ b/css/lib/base/_tables.dist.scss
@@ -22,6 +22,9 @@
 	Instead copy it to css/custom/components/_tables.scss and make your changes there.
 */
 
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
