--- a/css/lib/layouts/_footer.dist.scss
+++ b/css/lib/layouts/_footer.dist.scss
@@ -21,3 +21,9 @@
   DO NOT MODIFY THIS FILE!
 	Instead copy it to css/custom/components/_footer.scss and make your changes there.
 */
+
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
+footer {
+}
