--- a/css/lib/pages/_home.dist.scss
+++ b/css/lib/pages/_home.dist.scss
@@ -21,3 +21,9 @@
   DO NOT MODIFY THIS FILE!
 	Instead copy it to css/custom/components/_home.scss and make your changes there.
 */
+
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
+body.home {
+}
