--- a/css/lib/lyqbox.scss
+++ b/css/lib/lyqbox.scss
@@ -155,6 +155,12 @@
 		right: 0;
 		top: 0;
 		background-image: url(../images/icons/ios-close.svg);
+		color: inherit;
+		border: none;
+		padding: 0;
+		font: inherit;
+		cursor: pointer;
+		outline: inherit;
 	}
 
 	// prev button
